[package]
name = "aws-experiments"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[dependencies]
aws-sdk-lambda = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.8-alpha", package = "aws-sdk-lambda" }
tokio = { version = "1", features = ["full"] }
